# IndustrialControls

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example_qml.qrc  main.cpp
example/qml/: Main.qml
includes/: custom_double_validator.h  export.h  file_browser_model.h  register_types.h  svg_item.h  theme_loader.h
sources/: custom_double_validator.cpp
